# kitdiff

./: .gitignore  .typos.toml  Cargo.toml  README.md  RELEASES.md  Trunk.toml  clippy.toml  github.graphql  graphql.config.yml  index.html  kitdiff.js  kitdiff.toml  lychee.toml  manifest.json  rust-toolchain
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
auth-callback/: README.md  package.json  pnpm-lock.yaml
auth-callback/src/: index.ts
crates/kitdiff/: Cargo.toml
crates/kitdiff/src/: app.rs  lib.rs  main.rs
crates/octocrab-wasm/: Cargo.toml  README.md
crates/octocrab-wasm/src/: lib.rs  reqwest_tower_service.rs  wasm.rs
scripts/: generate_changelog.py  template_update.py
src/: app.rs  bar.rs  cli.rs  config.rs  diff_image_loader.rs  github_auth.rs  github_model.rs  github_pr.rs  home.rs  lib.rs  main.rs  octokit.rs  settings.rs  snapshot.rs  state.rs
src/github/: auth.rs  mod.rs  model.rs  octokit.rs  pr.graphql  pr.rs
src/github/auth/: handle_redirect.html  native.rs  wasm.rs
src/loaders/: archive_loader.rs  gh_archive_loader.rs  mod.rs  pr_loader.rs  tar_loader.rs  zip_loader.rs
src/native_loaders/: file_diff.rs  file_loader.rs  git_loader.rs  mod.rs
src/viewer/: diff_view.rs  file_tree.rs  mod.rs  viewer_options.rs
