[package]
authors.workspace = true
categories = ["gui", "development-tools", "multimedia::images", "graphics"]
description = "A visual diffing tool"
edition.workspace = true
homepage.workspace = true
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = ["gui", "tool", "image", "diff"]
license.workspace = true
name = "kitdiff"
publish = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[features]
default = []


[dependencies]


[dev-dependencies]
