[package]
authors.workspace = true
categories = ["gui", "development-tools", "multimedia::images", "graphics"]
description = "A visual diffing tool"
edition.workspace = true
homepage.workspace = true
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = ["gui", "tool", "image", "diff"]
license.workspace = true
name = "kitdiff"
publish = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[features]
default = []


[dependencies]
eframe = { version = "0.32.3", features = ["glow", "default", "persistence", "ron"] }
egui_extras = { version = "0.32.3", features = ["image", "file", "http"] }
ehttp = { version = "0.5.0", features = ["native-async"] }
dify = "0.7"
serde = "1.0"
serde_json = "1.0"
image = "0.25.8"
tempfile = { version = "3.0" }
zip = { version = "5", default-features = false, features = ["deflate"] }
flate2 = { version = "1.1" }
tar = { version = "0.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4" }
wasm-bindgen = { version = "0.2" }
js-sys = { version = "0.3" }
web-sys = { version = "0.3", features = ["Window", "Location", "History", "Navigator", "Clipboard", "Performance"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ignore = { version = "0.4" }
clap = { version = "4.0", features = ["derive"] }
git2 = { version = "0.18" }


[dev-dependencies]
