[package]
name = "octocrab-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
octocrab = { version = "0.45.0", default-features = false }
http-body = "1.0.1"
tower = "0.5.2"
http = "1.3.1"
http-body-util = "0.1.3"
bytes = "1"
wasm-bindgen-futures = "0.4"
futures = "0.3"
reqwest = "0.12"
thiserror = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
octocrab = { version = "0.45.0", features = ["default-client"] }
