[package]
name = "octocrab-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
octocrab = { version = "0.49.7", default-features = false, features = ["jwt-rust-crypto"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
http-body = "1.0.1"
tower = "0.5.2"
http = "1.3.1"
http-body-util = "0.1.3"
bytes = "1.10"
wasm-bindgen-futures = "0.4.54"
futures = "0.3.31"
reqwest = { version = "0.13.2", default-features = false, features = [] }
thiserror = "2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
octocrab = { version = "0.49.7", features = ["default-client"] }
